force-app/main/default/objects/Solar_Panel__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>