force-app/main/default/objects/Solar_Panel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference__c</columns>
    <columns>Product_Id__c</columns>
    <columns>Price__c</columns>
    <columns>Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>